--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ header {
 
 main{
     padding-top: 100px;
+    padding-bottom: 50px;
 }
 
 .row{
@@ -100,4 +101,11 @@ main{
 
 .col{
     width: 30%;
+}
+
+/* FOOTER */
+
+footer{
+    background-color: #1a1a1a;
+    color: white;
 }
