--- a/style.css
+++ b/style.css
@@ -123,12 +123,22 @@ main{
     display: none;
 }
 
-.heart{
-    display: none;
-    color: red;
+.wish-list{
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+
     position: absolute;
-    right: 10px;
+    right: 0px;
     top: 10px;
+
+    background-color: white;
+
+}
+
+.heart{
+    color: black;
     font-size: 30px;
 }
 
@@ -137,11 +147,11 @@ main{
 }
 
 .col:hover .none{
-    display: block;
+    display: inline-block;
 }
 
 .col:hover .heart{
-    display: block;
+    color: red;
 }
 
 /* FOOTER */
